[tool.poetry]
name = "data-structures"
version = "0.1.0"
description = "linked_list, stack, queue, hash_table, bst"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "data_structures"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
